--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -26,7 +26,7 @@ jobs:
       with:
         image: ${{ env.DOCKER_REPOSITORY }}/${{ env.IMAGE_NAME }}
         registry: docker.io
-        tag: latest 
+        tag: latest-1 
         buildArgs: 'DD_GIT_REPOSITORY_URL=github.com/jon94/learn-golang,DD_GIT_COMMIT_SHA=$(git rev-parse HEAD)'
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
